Resolve contrast

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -48,7 +48,7 @@ main {
     height: calc(100% - 200px);
 
     h2 {
-      color: hsl(0, 0%, 50%);
+      color: hsl(0, 0%, 45%);
       font-size: 1.15rem;
       text-transform: uppercase;
       letter-spacing: 0.05em;
