--- a/src/sass/_prism.scss
+++ b/src/sass/_prism.scss
@@ -86,7 +86,7 @@ pre[class*="language-"] {
 .language-scss .token.string,
 .style .token.string,
 .token.variable {
-  color: #d92d7a;
+  color: #d2176b;
 }
 
 .token.function {
@@ -95,7 +95,7 @@ pre[class*="language-"] {
 
 .token.atrule,
 .token.attr-value {
-  color: #6b65e8;
+  color: #5953d3;
 }
 
 .token.keyword {
